--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,6 +4,8 @@ spring:
     url: jdbc:h2:tcp://localhost/~/cvsgotest
     username: sa
   jpa:
-    show-sql: true
     hibernate:
       ddl-auto: none
+    properties:
+      hibernate:
+        format_sql: true
