chore: 로컬 환경과 테스트 환경 분리 #5

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:tcp://localhost/~/cvsgotest
+    url: jdbc:h2:tcp://localhost/~/cvsgo
     username: sa
   jpa:
     hibernate:
