--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,11 @@ dependencies {
 	// spring rest docs
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 }
 
 asciidoctor {
