chore: dev, prod, test yml 파일에 secret key 추가 #8

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -10,3 +10,5 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.MariaDB102Dialect
+jwt:
+  secret: ${SECRET_KEY}
