--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,3 +10,14 @@ spring:
       ddl-auto: none
 jwt:
   secret-key: ${SECRET_KEY}
+cloud:
+  aws:
+    credentials:
+      accessKey: ${AWS_ACCESS_KEY}
+      secretKey: ${AWS_SECRET_KEY}
+    s3:
+      bucket: cvs-go
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
