--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,3 +11,14 @@ spring:
         format_sql: true
 jwt:
   secret-key: ${SECRET_KEY}
+cloud:
+  aws:
+    credentials:
+      accessKey: ${AWS_ACCESS_KEY}
+      secretKey: ${AWS_SECRET_KEY}
+    s3:
+      bucket: cvs-go
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
