--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -9,6 +9,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.MariaDB102Dialect
+        default_batch_fetch_size: 1000
 jwt:
   secret-key: ${SECRET_KEY}
 cloud:
