chore: jar 파일 설정 #84

--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,10 @@ ext {
 	snippetsDir = file('build/generated-snippets')
 }
 
+jar {
+	enabled = false
+}
+
 bootJar {
 	enabled = true
 	dependsOn asciidoctor
