--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,16 +35,20 @@ jobs:
         
     - name: Build with Gradle
       run: ./gradlew build -x test
+
+    - name: Make zip file
+        run: zip -qq -r ./$GITHUB_SHA.zip .
+        shell: bash
         
     - name: AWS Configure credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-        aws-region: ap-northeast-2      
+        aws-region: ap-northeast-2
 
     - name: Upload to S3
-      run: aws s3 cp ${{ env.GITHUB_SHA }}.zip s3://${{ env.S3_BUCKET_NAME }}/${{ env.GITHUB_SHA }}.zip
+      run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://${{ env.S3_BUCKET_NAME }}/${{ env.PROJECT_NAME }}/$GITHUB_SHA.zip
       
     - name: Deploy with AWS codeDeploy
       run: aws deploy create-deployment
