chore: 파일 겹칠 시 덮어쓰기 #84

--- a/appspec.yml
+++ b/appspec.yml
@@ -5,6 +5,7 @@ files:
   - source:  /
     destination: /home/ubuntu/cvs-go-server
     overwrite: yes
+file_exists_behavior: OVERWRITE
 
 permissions:
   - object: /home/ubuntu/cvs-go-server
