--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,7 +14,7 @@ env:
   CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: cvsgo-server-group
 
 jobs:
-  build:
+  test_and_build:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,17 +29,24 @@ jobs:
         
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
-    
-    - name: Controller Test with Gradle
-      run: ./gradlew test --tests "com.cvsgo.controller.*"
-        
+
+    - name: Controller and Service Tests with Gradle
+      run: |
+        ./gradlew test --tests "com.cvsgo.controller.*"
+        ./gradlew test --tests "com.cvsgo.service.*"
+
     - name: Build with Gradle
       run: ./gradlew build -x test
 
     - name: Make zip file
       run: zip -qq -r ./$GITHUB_SHA.zip .
       shell: bash
-        
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test_and_build
+
+    steps:
     - name: AWS Configure credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -56,4 +63,3 @@ jobs:
         --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }}
         --deployment-config-name CodeDeployDefault.AllAtOnce
         --s3-location bucket=$S3_BUCKET_NAME,key=$PROJECT_NAME/$GITHUB_SHA.zip,bundleType=zip
-
